--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -735,26 +735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[x = 80, y = 40]\n",
-      "[]\n",
-      "[x = 38, y = 86]\n",
-      "[]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "480"
+       "(36758, 76358113886726)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,51 +769,38 @@
     "        \n",
     "        solver.check()\n",
     "        result = solver.model()\n",
-    "        # print(result)\n",
     "        return 3*result[x].as_long() + result[y].as_long() if result else 0\n",
     "\n",
-    "    part1 = 0\n",
+    "    part1, part2 = 0, 0\n",
     "    for group in groups:    \n",
     "        a = parse_coords(group[0])\n",
     "        b = parse_coords(group[1])\n",
     "        prize = parse_coords(group[2], True)\n",
     "        part1 += solve(a, b, prize)\n",
-    "    return part1\n",
+    "        part2 += solve(a, b, (prize[0]+10000000000000, prize[1]+10000000000000))\n",
+    "    return part1, part2\n",
+    "\n",
     "day13()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Z3Exception",
-     "evalue": "b'parser error'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZ3Exception\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m y \u001b[38;5;241m=\u001b[39m z3\u001b[38;5;241m.\u001b[39mInt(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m solver\u001b[38;5;241m.\u001b[39mminimize(x\u001b[38;5;241m+\u001b[39my)\n\u001b[1;32m----> 5\u001b[0m solver\u001b[38;5;241m.\u001b[39madd(\u001b[43mx\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43my\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43mj\u001b[49m)\n\u001b[0;32m      6\u001b[0m solver\u001b[38;5;241m.\u001b[39mcheck()\n\u001b[0;32m      7\u001b[0m result \u001b[38;5;241m=\u001b[39m solver\u001b[38;5;241m.\u001b[39mmodel()\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3.py:1033\u001b[0m, in \u001b[0;36mExprRef.__eq__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m other \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1032\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m-> 1033\u001b[0m a, b \u001b[38;5;241m=\u001b[39m \u001b[43m_coerce_exprs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1034\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m BoolRef(Z3_mk_eq(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mctx_ref(), a\u001b[38;5;241m.\u001b[39mas_ast(), b\u001b[38;5;241m.\u001b[39mas_ast()), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mctx)\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3.py:1237\u001b[0m, in \u001b[0;36m_coerce_exprs\u001b[1;34m(a, b, ctx)\u001b[0m\n\u001b[0;32m   1235\u001b[0m s \u001b[38;5;241m=\u001b[39m _coerce_expr_merge(s, b)\n\u001b[0;32m   1236\u001b[0m a \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mcast(a)\n\u001b[1;32m-> 1237\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcast\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1238\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (a, b)\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3.py:2406\u001b[0m, in \u001b[0;36mArithSortRef.cast\u001b[1;34m(self, val)\u001b[0m\n\u001b[0;32m   2404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2405\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_int():\n\u001b[1;32m-> 2406\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mIntVal\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mctx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2407\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_real():\n\u001b[0;32m   2408\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m RealVal(val, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mctx)\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3.py:3243\u001b[0m, in \u001b[0;36mIntVal\u001b[1;34m(val, ctx)\u001b[0m\n\u001b[0;32m   3235\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Return a Z3 integer value. If `ctx=None`, then the global context is used.\u001b[39;00m\n\u001b[0;32m   3236\u001b[0m \n\u001b[0;32m   3237\u001b[0m \u001b[38;5;124;03m>>> IntVal(1)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3240\u001b[0m \u001b[38;5;124;03m100\u001b[39;00m\n\u001b[0;32m   3241\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3242\u001b[0m ctx \u001b[38;5;241m=\u001b[39m _get_ctx(ctx)\n\u001b[1;32m-> 3243\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m IntNumRef(\u001b[43mZ3_mk_numeral\u001b[49m\u001b[43m(\u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mref\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_to_int_str\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mIntSort\u001b[49m\u001b[43m(\u001b[49m\u001b[43mctx\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mast\u001b[49m\u001b[43m)\u001b[49m, ctx)\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3core.py:2378\u001b[0m, in \u001b[0;36mZ3_mk_numeral\u001b[1;34m(a0, a1, a2, _elems)\u001b[0m\n\u001b[0;32m   2376\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mZ3_mk_numeral\u001b[39m(a0, a1, a2, _elems\u001b[38;5;241m=\u001b[39mElementaries(_lib\u001b[38;5;241m.\u001b[39mZ3_mk_numeral)):\n\u001b[0;32m   2377\u001b[0m   r \u001b[38;5;241m=\u001b[39m _elems\u001b[38;5;241m.\u001b[39mf(a0, _str_to_bytes(a1), a2)\n\u001b[1;32m-> 2378\u001b[0m   \u001b[43m_elems\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma0\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2379\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m r\n",
-      "File \u001b[1;32mc:\\Users\\tonyz\\projects\\advent-code\\2024\\.venv\\Lib\\site-packages\\z3\\z3core.py:1566\u001b[0m, in \u001b[0;36mElementaries.Check\u001b[1;34m(self, ctx)\u001b[0m\n\u001b[0;32m   1564\u001b[0m err \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_error_code(ctx)\n\u001b[0;32m   1565\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m err \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mOK:\n\u001b[1;32m-> 1566\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mException(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_error_message(ctx, err))\n",
-      "\u001b[1;31mZ3Exception\u001b[0m: b'parser error'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Button A: X+94, Y+34', 'Button B: X+22, Y+67', 'Prize: X=8400, Y=5400', '', 'Button A: X+26, Y+66', 'Button B: X+67, Y+21', 'Prize: X=12748, Y=12176', '', 'Button A: X+17, Y+86', 'Button B: X+84, Y+37', 'Prize: X=7870, Y=6450', '', 'Button A: X+69, Y+23', 'Button B: X+27, Y+71', 'Prize: X=18641, Y=10279']\n"
      ]
     }
    ],
    "source": [
-    "solver = z3.Optimize()\n",
-    "x = z3.Int('x')\n",
-    "y = z3.Int('y')\n",
-    "solver.minimize(x+y)\n",
-    "solver.add(x+y == 3j)\n",
-    "solver.check()\n",
-    "result = solver.model()\n",
-    "print(result)"
+    "def day14():\n",
+    "    print(data(0))\n",
+    "\n",
+    "day14()"
    ]
   }
  ],
