--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "def yx(n):\n",
     "    return int(n.imag), int(n.real)\n",
     "def icoord(y, x):\n",
-    "    return x+1j*y"
+    "    return int(x)+1j*int(y)"
    ]
   },
   {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "(231852216, 8159)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,39 +825,96 @@
     "        fx, fy = (x+n*vx)%wide, (y+n*vy)%tall\n",
     "        return fy, fx\n",
     "\n",
-    "    quadrants = get_quadrants([run_robot(robot, 100) for robot in robots])\n",
-    "    part1 = math.prod((quadrants[x] for x in range(1, 5)))\n",
+    "    def get_danger(n):\n",
+    "        quadrants = get_quadrants([run_robot(robot, n) for robot in robots])\n",
+    "        danger = math.prod((quadrants[x] for x in range(1, 5)))\n",
+    "        return danger, n\n",
     "\n",
-    "    def run_robots(n):\n",
-    "        ps = [run_robot(robot, n) for robot in robots]\n",
-    "        variance = np.var([p[0] for p in ps])+np.var([p[1] for p in ps])\n",
-    "        return variance, n\n",
-    "\n",
-    "    _, n = min(run_robots(n) for n in range(wide*tall))\n",
+    "    _, n = min(get_danger(n) for n in range(wide*tall))\n",
     "    ps = [run_robot(robot, n) for robot in robots]\n",
     "    with open(f'outputs/{n}.txt', 'w+') as f:\n",
     "        np.savetxt(f, debug_array(np.full((tall, wide), 'O'), ps, False), fmt='%s')\n",
-    "    return part1, n\n",
+    "    return get_danger(100)[0], n\n",
     "\n",
     "day14(101, 103)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['p=0,4 v=3,-3', 'p=6,3 v=-1,-3', 'p=10,3 v=-1,2', 'p=2,0 v=2,-1', 'p=0,0 v=1,3', 'p=3,0 v=-2,-2', 'p=7,6 v=-1,-3', 'p=3,0 v=-1,-2', 'p=9,3 v=2,3', 'p=7,3 v=-1,2', 'p=2,4 v=2,-3', 'p=9,5 v=-3,-3']\n"
+      "(4+4j) {(7+2j), (3+4j), (7+4j), (1+6j), (4+6j), (7+6j), (5+8j), (3+1j), (6+1j), (2+3j), (8+1j), (3+3j), (6+3j), (1+5j), (8+3j), (5+5j), (2+7j), (3+7j), (5+7j), (7+7j), (8+7j)} {0j, (1+0j), (2+0j), (3+0j), (4+0j), (5+0j), (6+0j), (7+0j), (8+0j), (9+0j), 2j, 4j, (9+2j), 6j, (9+4j), 8j, (9+6j), (9+8j), 1j, 3j, (9+1j), 5j, (2+5j), (9+3j), 7j, (9+5j), 9j, (1+9j), (2+9j), (9+7j), (3+9j), (4+9j), (5+9j), (6+9j), (7+9j), (8+9j), (9+9j)} <vv>^<v^>v>^vv^v>v<>v^v<v<^vv<<<^><<><>>v<vvv<>^v^>^<<<><<v<<<v^vv^v>^vvv<<^>^v^^><<>>><>^<<><^vv^^<>vvv<>><^^v>^>vv<>v<<<<v<^v>^<^^>>>^<v<v><>vv>v^v^<>><>>>><^^>vv>v<^^^>>v^v^<^^>v^^>v^<^v>v<>>v^v^<v>v^^<^^vv<<<v<^>>^^^^>>>v^<>vvv^><v<<<>^^^vv^<vvv>^>v<^^^^v<>^>vvvv><>>v^<<^^^^^^><^><>>><>^^<<^^v>>><^<v>^<vv>>v>>>^v><>^v><<<<v>>v<v<v>vvv>^<><<>^><^>><>^v<><^vvv<^^<><v<<<<<><^v<<<><<<^^<v<^^^><^>>^<v^><<<^>>^v<v^v<v^>^>>^v>vv>^<<^v<>><<><<v<<v><>v<^vv<<<>^^v^>^^>>><<^v>>v^v><^^>>^<>vv^<><^^>^^^<><vvvvv^v<v<<>^v<v>v<<^><<><<><<<^^<<<^<<>><<><^^^>^^<>^>v<>^^>vv<^v^v<vv>^<><v<^v>^^^>>>^^vvv^>vvv<>>>^<^>>>>>^<<^v>^vvv<>^<><<v>v^^>>><<^^<>>^v^<v^vv<>v^<<>^<^v^v><^<<<><<^<v><v<>vv>>v><v^<vv<>v^<<^\n",
+      "[['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' 'X' '.' 'X' '.' 'X' 'X' 'X' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' 'X' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' 'X' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' 'X' '.' '.' '.' '.' '.' '.' 'X' '.']\n",
+      " ['.' 'X' '.' '.' '.' '.' '.' 'X' 'X' '.']\n",
+      " ['.' 'X' '.' '.' '.' '.' '.' 'X' 'X' '.']\n",
+      " ['.' 'X' 'X' '.' '.' '.' '.' 'X' 'X' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10092"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day15():\n",
-    "    print(data(0))\n",
+    "    text = data(15)\n",
+    "    split = text.index('')\n",
+    "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
+    "    imap = {'^': -1j, 'v': 1j, '>': 1, '<': -1}\n",
+    "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
+    "    boxes = set(icoord(*x) for x in np.argwhere(grid == 'O'))\n",
+    "    walls = set(icoord(*x) for x in np.argwhere(grid == '#'))\n",
+    "\n",
+    "    def _push(old, diff):\n",
+    "        new = old + diff\n",
+    "        # print('_push', old, new)\n",
+    "        if new in walls:\n",
+    "            return\n",
+    "        if new in boxes:\n",
+    "            if not (new := _push(new, diff)):\n",
+    "                return\n",
+    "        return new\n",
+    "\n",
+    "    def push(robot, instruction):\n",
+    "        diff = imap[instruction]\n",
+    "        new = robot + diff\n",
+    "        end = _push(robot, diff)\n",
+    "        # print('push', robot, instruction, end)\n",
+    "        if not end:\n",
+    "            return robot\n",
+    "        if end != new:\n",
+    "            boxes.add(end)\n",
+    "            boxes.remove(new)\n",
+    "        return new\n",
+    "        \n",
+    "    # print(robot, boxes, walls, instructions)\n",
+    "\n",
+    "    for i in instructions:\n",
+    "        robot = push(robot, i)\n",
+    "        # print(robot, boxes)\n",
+    "\n",
+    "    # debug_array(np.full(grid.shape, '.'), [yx(box) for box in boxes])\n",
+    "\n",
+    "    score = int(sum(n.imag*100+n.real for n in boxes))\n",
+    "    return score\n",
+    "    \n",
     "day15()"
    ]
   }
