--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,33 +841,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4+4j) {(7+2j), (3+4j), (7+4j), (1+6j), (4+6j), (7+6j), (5+8j), (3+1j), (6+1j), (2+3j), (8+1j), (3+3j), (6+3j), (1+5j), (8+3j), (5+5j), (2+7j), (3+7j), (5+7j), (7+7j), (8+7j)} {0j, (1+0j), (2+0j), (3+0j), (4+0j), (5+0j), (6+0j), (7+0j), (8+0j), (9+0j), 2j, 4j, (9+2j), 6j, (9+4j), 8j, (9+6j), (9+8j), 1j, 3j, (9+1j), 5j, (2+5j), (9+3j), 7j, (9+5j), 9j, (1+9j), (2+9j), (9+7j), (3+9j), (4+9j), (5+9j), (6+9j), (7+9j), (8+9j), (9+9j)} <vv>^<v^>v>^vv^v>v<>v^v<v<^vv<<<^><<><>>v<vvv<>^v^>^<<<><<v<<<v^vv^v>^vvv<<^>^v^^><<>>><>^<<><^vv^^<>vvv<>><^^v>^>vv<>v<<<<v<^v>^<^^>>>^<v<v><>vv>v^v^<>><>>>><^^>vv>v<^^^>>v^v^<^^>v^^>v^<^v>v<>>v^v^<v>v^^<^^vv<<<v<^>>^^^^>>>v^<>vvv^><v<<<>^^^vv^<vvv>^>v<^^^^v<>^>vvvv><>>v^<<^^^^^^><^><>>><>^^<<^^v>>><^<v>^<vv>>v>>>^v><>^v><<<<v>>v<v<v>vvv>^<><<>^><^>><>^v<><^vvv<^^<><v<<<<<><^v<<<><<<^^<v<^^^><^>>^<v^><<<^>>^v<v^v<v^>^>>^v>vv>^<<^v<>><<><<v<<v><>v<^vv<<<>^^v^>^^>>><<^v>>v^v><^^>>^<>vv^<><^^>^^^<><vvvvv^v<v<<>^v<v>v<<^><<><<><<<^^<<<^<<>><<><^^^>^^<>^>v<>^^>vv<^v^v<vv>^<><v<^v>^^^>>>^^vvv^>vvv<>>>^<^>>>>>^<<^v>^vvv<>^<><<v>v^^>>><<^^<>>^v^<v^vv<>v^<<>^<^v^v><^<<<><<^<v><v<>vv>>v><v^<vv<>v^<<^\n",
-      "[['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' 'X' '.' 'X' '.' 'X' 'X' 'X' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' 'X' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' 'X' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' 'X' '.' '.' '.' '.' '.' '.' 'X' '.']\n",
-      " ['.' 'X' '.' '.' '.' '.' '.' 'X' 'X' '.']\n",
-      " ['.' 'X' '.' '.' '.' '.' '.' 'X' 'X' '.']\n",
-      " ['.' 'X' 'X' '.' '.' '.' '.' 'X' 'X' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "10092"
+       "1442192"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,6 +897,232 @@
     "\n",
     "    score = int(sum(n.imag*100+n.real for n in boxes))\n",
     "    return score\n",
+    "    \n",
+    "day15()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5+3j) {(3.5+3j), (4.5+3j), (3+3j), (4+3j), (3+4j), (3.5+4j)}\n",
+      "(4.5+3j) {(2.5+3j), (3.5+3j), (4+3j), (3+3j), (3+4j), (3.5+4j), (4.5+3j)}\n",
+      "(4.5+4j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+4j), (4.5+4j)}\n",
+      "(4.5+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+5j), (4.5+5j)}\n",
+      "(4+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+5j), (3.5+5j)}\n",
+      "(3.5+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (3+5j), (3.5+5j), (2.5+5j)}\n",
+      "(3.5+4j) {(2.5+5j), (3.5+2j), (3.5+3j), (3.5+4j), (3+2j), (2.5+3j), (3+3j), (3+4j)}\n",
+      "(3.5+3j) {(2.5+5j), (3.5+2j), (3.5+3j), (3+1j), (3.5+1j), (3+2j), (2.5+3j), (3+3j)}\n",
+      "(3+3j) {(3+1j), (3.5+1j), (3.5+2j), (3+2j), (1.5+3j), (2.5+3j), (3+3j), (2+3j), (2.5+5j)}\n",
+      "(2.5+3j) {(3+1j), (3.5+1j), (3.5+2j), (3+2j), (2+3j), (2.5+3j), (1.5+3j), (0.5+3j), (1+3j), (2.5+5j)}\n",
+      "(2.5+2j) {(3+1j), (3.5+1j), (2.5+2j), (3.5+2j), (3+2j), (2+2j), (1.5+3j), (0.5+3j), (1+3j), (2.5+5j)}\n",
+      "[['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' 'X' 'X' 'X' 'X' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' 'X' 'X' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' 'X' 'X' 'X' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' 'X' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2223"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15():\n",
+    "    text = data(0)\n",
+    "    split = text.index('')\n",
+    "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
+    "    imap = {'^': -1j, 'v': 1j, '>': 0.5, '<': -0.5}\n",
+    "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
+    "    boxes = set(icoord(*x) for x in np.argwhere(grid == 'O'))\n",
+    "    boxes.update([x+0.5 for x in boxes])\n",
+    "    walls = set(icoord(*x) for x in np.argwhere(grid == '#'))\n",
+    "\n",
+    "    def _push(old, diff):\n",
+    "        olds = set([old, math.floor(old.real)+1j*old.imag])\n",
+    "        _news = set([old+diff for old in olds])\n",
+    "        news = _news.copy()\n",
+    "        # print('_push', old, olds)\n",
+    "        if walls.intersection(news):\n",
+    "            return set(), set()\n",
+    "        for new in _news:\n",
+    "            if new in boxes:\n",
+    "                touched, ends = _push(new, diff)\n",
+    "                if not ends:\n",
+    "                    return set(), set()\n",
+    "                news.update(ends)\n",
+    "                olds.update(touched)\n",
+    "        return olds, news\n",
+    "\n",
+    "    def push(robot, instruction):\n",
+    "        diff = imap[instruction]\n",
+    "        new = robot + diff\n",
+    "        touched, ends = _push(robot, diff)\n",
+    "        # print('push', robot, instruction)\n",
+    "        # print(boxes)\n",
+    "        # print(touched)\n",
+    "        # print(ends)\n",
+    "        if not ends:\n",
+    "            return robot\n",
+    "        boxes.difference_update(touched)\n",
+    "        boxes.update(ends)\n",
+    "        return new\n",
+    "        \n",
+    "    # print(robot, boxes, walls, instructions)\n",
+    "\n",
+    "    for i in instructions:\n",
+    "        print(robot, boxes)\n",
+    "        robot = push(robot, i)\n",
+    "\n",
+    "\n",
+    "    debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
+    "\n",
+    "    score = int(sum(n.imag*100+n.real for n in boxes))\n",
+    "    return score\n",
+    "    \n",
+    "day15()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 2.5}"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Box:\n",
+    "    def __init__(self, x):\n",
+    "        self.p = {x, x+0.5}\n",
+    "    def move(self, diff):\n",
+    "        self.p = {x+diff for x in self.p}\n",
+    "    def ps(self): \n",
+    "        return self.p\n",
+    "    \n",
+    "test = Box(2)\n",
+    "test.ps()\n",
+    "\n",
+    "a = [test]\n",
+    "\n",
+    "a[0].ps()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1448458"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15():\n",
+    "    class Box:\n",
+    "        def __init__(self, x):\n",
+    "            self.p = (x, x+0.5)\n",
+    "        def move(self, diff):\n",
+    "            self.p = tuple([x+diff for x in self.p])\n",
+    "        def ps(self): \n",
+    "            return self.p\n",
+    "        def __repr__(self):\n",
+    "            return str(self.p)\n",
+    "\n",
+    "    text = data(15)  \n",
+    "    split = text.index('')\n",
+    "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
+    "    imap = {'^': -1j, 'v': 1j, '>': 0.5, '<': -0.5}\n",
+    "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
+    "\n",
+    "    boxes = {}\n",
+    "    for x in np.argwhere(grid == 'O'):\n",
+    "        box = Box(icoord(*x))\n",
+    "        for p in box.ps():\n",
+    "            boxes[p] = box\n",
+    "    walls = set()\n",
+    "    for x in np.argwhere(grid == '#'):\n",
+    "        c = icoord(*x)\n",
+    "        walls.add(c)\n",
+    "        walls.add(c+0.5)\n",
+    "\n",
+    "    def _push(old, diff):\n",
+    "        new = old+diff\n",
+    "        # print('_push', old, diff, new, boxes.get(new))\n",
+    "        if new in walls:\n",
+    "            return\n",
+    "        touched = set()\n",
+    "        box = boxes.get(new)\n",
+    "        if box:\n",
+    "            touched.add(box)\n",
+    "            for p in box.ps():\n",
+    "                if p == old:\n",
+    "                    continue\n",
+    "                if (t := _push(p, diff)) == None:\n",
+    "                    return\n",
+    "                touched.update(t)\n",
+    "        return touched\n",
+    "\n",
+    "    def push(robot, instruction):\n",
+    "        diff = imap[instruction]\n",
+    "        touched = _push(robot, diff)\n",
+    "        # print('push', robot, touched)\n",
+    "        if touched is None:\n",
+    "            return robot\n",
+    "        for box in touched:\n",
+    "            for p in box.ps():\n",
+    "                del boxes[p]\n",
+    "        for box in touched:\n",
+    "            box.move(diff)\n",
+    "            for p in box.ps():\n",
+    "                boxes[p] = box\n",
+    "        return robot + diff\n",
+    "    # print(robot, boxes, walls, instructions)\n",
+    "\n",
+    "    # debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
+    "\n",
+    "    for i in instructions:\n",
+    "        # print('r', robot, boxes.keys())\n",
+    "        robot = push(robot, i)\n",
+    "\n",
+    "    # debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
+    "\n",
+    "    score = 0\n",
+    "    for box in set(boxes.values()):\n",
+    "        ps = [(p.imag, p.real) for p in box.ps()]\n",
+    "        # print(100*min(p[0] for p in ps) + 2*min(p[1] for p in ps), ps)\n",
+    "        score += 100*min(p[0] for p in ps) + 2*min(p[1] for p in ps)\n",
+    "\n",
+    "    return int(score)\n",
     "    \n",
     "day15()"
    ]
