--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -841,243 +841,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1442192"
+       "(1442192, 1448458)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day15():\n",
-    "    text = data(15)\n",
+    "def day15(flag=False):\n",
+    "    text = data(15)  \n",
     "    split = text.index('')\n",
     "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
-    "    imap = {'^': -1j, 'v': 1j, '>': 1, '<': -1}\n",
+    "    \n",
     "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
-    "    boxes = set(icoord(*x) for x in np.argwhere(grid == 'O'))\n",
-    "    walls = set(icoord(*x) for x in np.argwhere(grid == '#'))\n",
-    "\n",
-    "    def _push(old, diff):\n",
-    "        new = old + diff\n",
-    "        # print('_push', old, new)\n",
-    "        if new in walls:\n",
-    "            return\n",
-    "        if new in boxes:\n",
-    "            if not (new := _push(new, diff)):\n",
-    "                return\n",
-    "        return new\n",
-    "\n",
-    "    def push(robot, instruction):\n",
-    "        diff = imap[instruction]\n",
-    "        new = robot + diff\n",
-    "        end = _push(robot, diff)\n",
-    "        # print('push', robot, instruction, end)\n",
-    "        if not end:\n",
-    "            return robot\n",
-    "        if end != new:\n",
-    "            boxes.add(end)\n",
-    "            boxes.remove(new)\n",
-    "        return new\n",
-    "        \n",
-    "    # print(robot, boxes, walls, instructions)\n",
-    "\n",
-    "    for i in instructions:\n",
-    "        robot = push(robot, i)\n",
-    "        # print(robot, boxes)\n",
-    "\n",
-    "    # debug_array(np.full(grid.shape, '.'), [yx(box) for box in boxes])\n",
-    "\n",
-    "    score = int(sum(n.imag*100+n.real for n in boxes))\n",
-    "    return score\n",
-    "    \n",
-    "day15()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5+3j) {(3.5+3j), (4.5+3j), (3+3j), (4+3j), (3+4j), (3.5+4j)}\n",
-      "(4.5+3j) {(2.5+3j), (3.5+3j), (4+3j), (3+3j), (3+4j), (3.5+4j), (4.5+3j)}\n",
-      "(4.5+4j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+4j), (4.5+4j)}\n",
-      "(4.5+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+5j), (4.5+5j)}\n",
-      "(4+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (4+5j), (3.5+5j)}\n",
-      "(3.5+5j) {(2.5+3j), (3.5+3j), (3+3j), (3+4j), (3.5+4j), (3+5j), (3.5+5j), (2.5+5j)}\n",
-      "(3.5+4j) {(2.5+5j), (3.5+2j), (3.5+3j), (3.5+4j), (3+2j), (2.5+3j), (3+3j), (3+4j)}\n",
-      "(3.5+3j) {(2.5+5j), (3.5+2j), (3.5+3j), (3+1j), (3.5+1j), (3+2j), (2.5+3j), (3+3j)}\n",
-      "(3+3j) {(3+1j), (3.5+1j), (3.5+2j), (3+2j), (1.5+3j), (2.5+3j), (3+3j), (2+3j), (2.5+5j)}\n",
-      "(2.5+3j) {(3+1j), (3.5+1j), (3.5+2j), (3+2j), (2+3j), (2.5+3j), (1.5+3j), (0.5+3j), (1+3j), (2.5+5j)}\n",
-      "(2.5+2j) {(3+1j), (3.5+1j), (2.5+2j), (3.5+2j), (3+2j), (2+2j), (1.5+3j), (0.5+3j), (1+3j), (2.5+5j)}\n",
-      "[['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' 'X' 'X' 'X' 'X' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' 'X' 'X' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' 'X' 'X' 'X' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' 'X' '.' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2223"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day15():\n",
-    "    text = data(0)\n",
-    "    split = text.index('')\n",
-    "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
-    "    imap = {'^': -1j, 'v': 1j, '>': 0.5, '<': -0.5}\n",
-    "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
-    "    boxes = set(icoord(*x) for x in np.argwhere(grid == 'O'))\n",
-    "    boxes.update([x+0.5 for x in boxes])\n",
-    "    walls = set(icoord(*x) for x in np.argwhere(grid == '#'))\n",
-    "\n",
-    "    def _push(old, diff):\n",
-    "        olds = set([old, math.floor(old.real)+1j*old.imag])\n",
-    "        _news = set([old+diff for old in olds])\n",
-    "        news = _news.copy()\n",
-    "        # print('_push', old, olds)\n",
-    "        if walls.intersection(news):\n",
-    "            return set(), set()\n",
-    "        for new in _news:\n",
-    "            if new in boxes:\n",
-    "                touched, ends = _push(new, diff)\n",
-    "                if not ends:\n",
-    "                    return set(), set()\n",
-    "                news.update(ends)\n",
-    "                olds.update(touched)\n",
-    "        return olds, news\n",
-    "\n",
-    "    def push(robot, instruction):\n",
-    "        diff = imap[instruction]\n",
-    "        new = robot + diff\n",
-    "        touched, ends = _push(robot, diff)\n",
-    "        # print('push', robot, instruction)\n",
-    "        # print(boxes)\n",
-    "        # print(touched)\n",
-    "        # print(ends)\n",
-    "        if not ends:\n",
-    "            return robot\n",
-    "        boxes.difference_update(touched)\n",
-    "        boxes.update(ends)\n",
-    "        return new\n",
-    "        \n",
-    "    # print(robot, boxes, walls, instructions)\n",
-    "\n",
-    "    for i in instructions:\n",
-    "        print(robot, boxes)\n",
-    "        robot = push(robot, i)\n",
-    "\n",
-    "\n",
-    "    debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
-    "\n",
-    "    score = int(sum(n.imag*100+n.real for n in boxes))\n",
-    "    return score\n",
-    "    \n",
-    "day15()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{2, 2.5}"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Box:\n",
-    "    def __init__(self, x):\n",
-    "        self.p = {x, x+0.5}\n",
-    "    def move(self, diff):\n",
-    "        self.p = {x+diff for x in self.p}\n",
-    "    def ps(self): \n",
-    "        return self.p\n",
-    "    \n",
-    "test = Box(2)\n",
-    "test.ps()\n",
-    "\n",
-    "a = [test]\n",
-    "\n",
-    "a[0].ps()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1448458"
-      ]
-     },
-     "execution_count": 184,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day15():\n",
+    "    walls = set()\n",
+    "    for x in np.argwhere(grid == '#'):\n",
+    "        c = icoord(*x)\n",
+    "        walls.add(c)\n",
+    "        if flag:\n",
+    "            walls.add(c+0.5)\n",
     "    class Box:\n",
-    "        def __init__(self, x):\n",
-    "            self.p = (x, x+0.5)\n",
+    "        def __init__(self, p):\n",
+    "            self.p = p\n",
     "        def move(self, diff):\n",
     "            self.p = tuple([x+diff for x in self.p])\n",
     "        def ps(self): \n",
     "            return self.p\n",
     "        def __repr__(self):\n",
     "            return str(self.p)\n",
-    "\n",
-    "    text = data(15)  \n",
-    "    split = text.index('')\n",
-    "    grid, instructions = np.array([list(x) for x in text[:split]]), ''.join(text[split+1:])\n",
-    "    imap = {'^': -1j, 'v': 1j, '>': 0.5, '<': -0.5}\n",
-    "    robot = icoord(*np.argwhere(grid == '@')[0])\n",
-    "\n",
     "    boxes = {}\n",
     "    for x in np.argwhere(grid == 'O'):\n",
-    "        box = Box(icoord(*x))\n",
+    "        c = icoord(*x)\n",
+    "        box = Box((c, c+0.5) if flag else (c,))\n",
     "        for p in box.ps():\n",
     "            boxes[p] = box\n",
-    "    walls = set()\n",
-    "    for x in np.argwhere(grid == '#'):\n",
-    "        c = icoord(*x)\n",
-    "        walls.add(c)\n",
-    "        walls.add(c+0.5)\n",
     "\n",
+    "    imap = {'^': -1j, 'v': 1j, '>': 0.5 if flag else 1, '<': -0.5 if flag else -1}\n",
+    "    \n",
     "    def _push(old, diff):\n",
     "        new = old+diff\n",
-    "        # print('_push', old, diff, new, boxes.get(new))\n",
     "        if new in walls:\n",
     "            return\n",
     "        touched = set()\n",
@@ -1095,7 +905,6 @@
     "    def push(robot, instruction):\n",
     "        diff = imap[instruction]\n",
     "        touched = _push(robot, diff)\n",
-    "        # print('push', robot, touched)\n",
     "        if touched is None:\n",
     "            return robot\n",
     "        for box in touched:\n",
@@ -1106,25 +915,36 @@
     "            for p in box.ps():\n",
     "                boxes[p] = box\n",
     "        return robot + diff\n",
-    "    # print(robot, boxes, walls, instructions)\n",
-    "\n",
-    "    # debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
     "\n",
     "    for i in instructions:\n",
-    "        # print('r', robot, boxes.keys())\n",
     "        robot = push(robot, i)\n",
-    "\n",
-    "    # debug_array(np.full((grid.shape[0], grid.shape[1]*2), '.'), [(int(box.imag), int(box.real*2)) for box in boxes])\n",
     "\n",
     "    score = 0\n",
     "    for box in set(boxes.values()):\n",
     "        ps = [(p.imag, p.real) for p in box.ps()]\n",
-    "        # print(100*min(p[0] for p in ps) + 2*min(p[1] for p in ps), ps)\n",
-    "        score += 100*min(p[0] for p in ps) + 2*min(p[1] for p in ps)\n",
-    "\n",
+    "        score += 100*min(p[0] for p in ps) + (2 if flag else 1)*min(p[1] for p in ps)\n",
     "    return int(score)\n",
     "    \n",
-    "day15()"
+    "day15(), day15(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['##########', '#..O..O.O#', '#......O.#', '#.OO..O.O#', '#..O@..O.#', '#O#..O...#', '#O..O..O.#', '#.OO.O.OO#', '#....O...#', '##########', '', '<vv>^<v^>v>^vv^v>v<>v^v<v<^vv<<<^><<><>>v<vvv<>^v^>^<<<><<v<<<v^vv^v>^', 'vvv<<^>^v^^><<>>><>^<<><^vv^^<>vvv<>><^^v>^>vv<>v<<<<v<^v>^<^^>>>^<v<v', '><>vv>v^v^<>><>>>><^^>vv>v<^^^>>v^v^<^^>v^^>v^<^v>v<>>v^v^<v>v^^<^^vv<', '<<v<^>>^^^^>>>v^<>vvv^><v<<<>^^^vv^<vvv>^>v<^^^^v<>^>vvvv><>>v^<<^^^^^', '^><^><>>><>^^<<^^v>>><^<v>^<vv>>v>>>^v><>^v><<<<v>>v<v<v>vvv>^<><<>^><', '^>><>^v<><^vvv<^^<><v<<<<<><^v<<<><<<^^<v<^^^><^>>^<v^><<<^>>^v<v^v<v^', '>^>>^v>vv>^<<^v<>><<><<v<<v><>v<^vv<<<>^^v^>^^>>><<^v>>v^v><^^>>^<>vv^', '<><^^>^^^<><vvvvv^v<v<<>^v<v>v<<^><<><<><<<^^<<<^<<>><<><^^^>^^<>^>v<>', '^^>vv<^v^v<vv>^<><v<^v>^^^>>>^^vvv^>vvv<>>>^<^>>>>>^<<^v>^vvv<>^<><<v>', 'v^^>>><<^^<>>^v^<v^vv<>v^<<>^<^v^v><^<<<><<^<v><v<>vv>>v><v^<vv<>v^<<^']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day16():\n",
+    "    print(data(0))\n",
+    "day16()"
    ]
   }
  ],
