--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -980,7 +980,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "518\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "85480"
+      ]
+     },
+     "execution_count": 393,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day16():\n",
+    "    grid = np.array(data(16, list))\n",
+    "    start = tuple(np.argwhere(grid == 'S')[0])\n",
+    "    end = tuple(np.argwhere(grid == 'E')[0])\n",
+    "    walls = {tuple(x) for x in np.argwhere(grid=='#')}\n",
+    "\n",
+    "    def tuple_add(a, b):\n",
+    "        return (a[0]+b[0], a[1]+b[1])\n",
+    "    def tuple_sub(a, b):\n",
+    "        return (a[0]-b[0], a[1]-b[1])\n",
+    "    \n",
+    "    def rotate90(a):\n",
+    "        if abs(a[0]):\n",
+    "            yield (0, 1)\n",
+    "            yield (0, -1)\n",
+    "        else:\n",
+    "            yield (1, 0)\n",
+    "            yield (-1, 0)\n",
+    "\n",
+    "    def get_neighbors(node, distance):\n",
+    "        pos, dir = node\n",
+    "        new = tuple_add(pos, dir)\n",
+    "        if new not in walls:\n",
+    "            yield (distance+1, (new, dir))\n",
+    "        for d in rotate90(dir):\n",
+    "            yield (distance+1000, (pos, d))\n",
+    "\n",
+    "    def end_condition(node, _):\n",
+    "        return node[0] == end\n",
+    "\n",
+    "    visited, current = search((start, (0, 1)), get_neighbors, end_condition, method='dijkstra')\n",
+    "    score = visited[current]\n",
+    "    # print(score, len(visited), visited)\n",
+    "\n",
+    "    def gn(node, _):\n",
+    "        p, dir = node\n",
+    "        distance = visited[(p, dir)]\n",
+    "        # print('a', p, dir, distance)\n",
+    "        new = (tuple_sub(p, dir), dir)\n",
+    "        # print('b', visited.get(new, math.inf))\n",
+    "        if visited.get(new, math.inf) == distance-1:\n",
+    "            # print('here', new, visited.get(new, math.inf))\n",
+    "            yield new\n",
+    "        for d in rotate90(dir):\n",
+    "            new = (p, d)\n",
+    "            if visited.get(new, math.inf) == distance-1000:\n",
+    "                # print('here2', new, visited.get(new, math.inf))\n",
+    "                yield new\n",
+    "\n",
+    "    def ec(node, distance):\n",
+    "        return node == (start, (0, 1))\n",
+    "    \n",
+    "    history, _ = search(current, gn, ec)\n",
+    "    # print(len(history), _, history)\n",
+    "\n",
+    "    seats = {x[0] for x in history}\n",
+    "    print(len(seats))\n",
+    "\n",
+    "    # debug_array(grid, [x[0] for x in history])\n",
+    "\n",
+    "    return visited[current]\n",
+    "\n",
+    "day16()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -988,33 +1077,33 @@
      "output_type": "stream",
      "text": [
       "7036 427 {'((1+13j), 1)': 0, '((2+13j), 1)': 1, '((3+13j), 1)': 2, '((1+13j), -1j)': 1000, '((1+13j), 1j)': 1000, '((1+12j), (-0-1j))': 1001, '((2+13j), -1j)': 1001, '((2+13j), 1j)': 1001, '((1+11j), -1j)': 1002, '((3+13j), -1j)': 1002, '((3+13j), 1j)': 1002, '((1+10j), (-0-1j))': 1003, '((1+9j), -1j)': 1004, '((1+13j), (-1+0j))': 2000, '((1+13j), (1-0j))': 2000, '((1+12j), (-1+0j))': 2001, '((1+12j), (1+0j))': 2001, '((2+13j), (-1+0j))': 2001, '((2+13j), (1+0j))': 2001, '((2+13j), (1-0j))': 2001, '((1+11j), (-1+0j))': 2002, '((1+11j), (1-0j))': 2002, '((3+13j), (-1+0j))': 2002, '((3+13j), (1+0j))': 2002, '((3+13j), (1-0j))': 2002, '((1+10j), (-1+0j))': 2003, '((1+10j), (1+0j))': 2003, '((2+11j), (1+0j))': 2003, '((1+9j), (-1+0j))': 2004, '((1+9j), (1-0j))': 2004, '((3+11j), (1+0j))': 2004, '((2+9j), (1+0j))': 2005, '((4+11j), (1+0j))': 2005, '((3+9j), (1+0j))': 2006, '((5+11j), (1+0j))': 2006, '((1+13j), (-0-1j))': 3000, '((1+12j), -1j)': 3001, '((1+12j), 1j)': 3001, '((2+13j), (-0-1j))': 3001, '((1+11j), (-0-1j))': 3002, '((1+11j), 1j)': 3002, '((3+13j), (-0-1j))': 3002, '((1+10j), -1j)': 3003, '((1+10j), 1j)': 3003, '((2+11j), -1j)': 3003, '((2+11j), 1j)': 3003, '((1+9j), (-0-1j))': 3004, '((1+9j), 1j)': 3004, '((3+11j), -1j)': 3004, '((3+11j), 1j)': 3004, '((2+9j), -1j)': 3005, '((2+9j), 1j)': 3005, '((3+10j), (-0-1j))': 3005, '((4+11j), -1j)': 3005, '((4+11j), 1j)': 3005, '((3+9j), -1j)': 3006, '((3+9j), 1j)': 3006, '((5+11j), -1j)': 3006, '((5+11j), 1j)': 3006, '((3+10j), 1j)': 3007, '((3+8j), (-0-1j))': 3007, '((5+10j), (-0-1j))': 3007, '((5+12j), 1j)': 3007, '((3+7j), -1j)': 3008, '((5+13j), 1j)': 3008, '((5+9j), -1j)': 3008, '((3+6j), (-0-1j))': 3009, '((5+8j), (-0-1j))': 3009, '((3+5j), -1j)': 3010, '((5+7j), -1j)': 3010, '((1+13j), (1+0j))': 4000, '((1+12j), (1-0j))': 4001, '((1+11j), (1+0j))': 4002, '((1+10j), (1-0j))': 4003, '((2+11j), (-1+0j))': 4003, '((2+11j), (1-0j))': 4003, '((1+9j), (1+0j))': 4004, '((3+11j), (-1+0j))': 4004, '((3+11j), (1-0j))': 4004, '((2+9j), (-1+0j))': 4005, '((2+9j), (1-0j))': 4005, '((3+10j), (-1+0j))': 4005, '((3+10j), (1+0j))': 4005, '((4+11j), (-1+0j))': 4005, '((4+11j), (1-0j))': 4005, '((3+9j), (-1+0j))': 4006, '((3+9j), (1-0j))': 4006, '((5+11j), (-1+0j))': 4006, '((5+11j), (1-0j))': 4006, '((3+10j), (1-0j))': 4007, '((3+8j), (-1+0j))': 4007, '((3+8j), (1+0j))': 4007, '((5+10j), (-1+0j))': 4007, '((5+10j), (1+0j))': 4007, '((5+12j), (-1+0j))': 4007, '((5+12j), (1-0j))': 4007, '((3+7j), (-1+0j))': 4008, '((3+7j), (1-0j))': 4008, '((5+13j), (-1+0j))': 4008, '((5+13j), (1-0j))': 4008, '((5+9j), (-1+0j))': 4008, '((5+9j), (1-0j))': 4008, '((2+7j), (-1+0j))': 4009, '((3+6j), (-1+0j))': 4009, '((3+6j), (1+0j))': 4009, '((4+7j), (1+0j))': 4009, '((5+8j), (-1+0j))': 4009, '((5+8j), (1+0j))': 4009, '((6+13j), (1+0j))': 4009, '((6+9j), (1+0j))': 4009, '((1+7j), (-1+0j))': 4010, '((3+5j), (-1+0j))': 4010, '((3+5j), (1-0j))': 4010, '((5+7j), (-1+0j))': 4010, '((5+7j), (1+0j))': 4010, '((5+7j), (1-0j))': 4010, '((7+13j), (1+0j))': 4010, '((7+9j), (1+0j))': 4010, '((4+7j), (-1+0j))': 4011, '((6+7j), (1+0j))': 4011, '((8+13j), (1+0j))': 4011, '((8+9j), (1+0j))': 4011, '((7+7j), (1+0j))': 4012, '((9+13j), (1+0j))': 4012, '((9+9j), (1+0j))': 4012, '((8+7j), (1+0j))': 4013, '((9+7j), (1+0j))': 4014, '((10+7j), (1+0j))': 4015, '((11+7j), (1+0j))': 4016, '((2+11j), (-0-1j))': 5003, '((3+11j), (-0-1j))': 5004, '((2+9j), (-0-1j))': 5005, '((3+10j), -1j)': 5005, '((4+11j), (-0-1j))': 5005, '((3+9j), (-0-1j))': 5006, '((5+11j), (-0-1j))': 5006, '((3+8j), -1j)': 5007, '((3+8j), 1j)': 5007, '((5+10j), -1j)': 5007, '((5+10j), 1j)': 5007, '((5+12j), (-0-1j))': 5007, '((5+12j), -1j)': 5007, '((3+7j), (-0-1j))': 5008, '((3+7j), 1j)': 5008, '((5+13j), (-0-1j))': 5008, '((5+13j), -1j)': 5008, '((5+9j), (-0-1j))': 5008, '((5+9j), 1j)': 5008, '((2+7j), (-0-1j))': 5009, '((2+7j), 1j)': 5009, '((3+6j), -1j)': 5009, '((3+6j), 1j)': 5009, '((4+7j), -1j)': 5009, '((4+7j), 1j)': 5009, '((5+8j), -1j)': 5009, '((5+8j), 1j)': 5009, '((6+13j), -1j)': 5009, '((6+13j), 1j)': 5009, '((6+9j), -1j)': 5009, '((6+9j), 1j)': 5009, '((1+7j), (-0-1j))': 5010, '((1+7j), 1j)': 5010, '((3+5j), (-0-1j))': 5010, '((3+5j), 1j)': 5010, '((5+7j), (-0-1j))': 5010, '((5+7j), 1j)': 5010, '((7+13j), -1j)': 5010, '((7+13j), 1j)': 5010, '((7+9j), -1j)': 5010, '((7+9j), 1j)': 5010, '((1+6j), -1j)': 5011, '((4+7j), (-0-1j))': 5011, '((6+7j), -1j)': 5011, '((6+7j), 1j)': 5011, '((7+12j), (-0-1j))': 5011, '((8+13j), -1j)': 5011, '((8+13j), 1j)': 5011, '((8+9j), -1j)': 5011, '((8+9j), 1j)': 5011, '((1+5j), (-0-1j))': 5012, '((7+11j), -1j)': 5012, '((7+7j), -1j)': 5012, '((7+7j), 1j)': 5012, '((9+13j), -1j)': 5012, '((9+13j), 1j)': 5012, '((9+9j), -1j)': 5012, '((9+9j), 1j)': 5012, '((1+4j), -1j)': 5013, '((8+7j), -1j)': 5013, '((8+7j), 1j)': 5013, '((9+10j), 1j)': 5013, '((9+12j), (-0-1j))': 5013, '((1+3j), (-0-1j))': 5014, '((9+11j), -1j)': 5014, '((9+11j), 1j)': 5014, '((9+7j), -1j)': 5014, '((9+7j), 1j)': 5014, '((1+2j), -1j)': 5015, '((10+7j), -1j)': 5015, '((10+7j), 1j)': 5015, '((9+10j), (-0-1j))': 5015, '((9+12j), 1j)': 5015, '((9+6j), (-0-1j))': 5015, '((1+1j), (-0-1j))': 5016, '((11+7j), -1j)': 5016, '((11+7j), 1j)': 5016, '((9+5j), -1j)': 5016, '((11+8j), 1j)': 5017, '((11+9j), 1j)': 5018, '((11+10j), 1j)': 5019, '((11+11j), 1j)': 5020, '((11+12j), 1j)': 5021, '((11+13j), 1j)': 5022, '((3+8j), (1-0j))': 6007, '((5+10j), (1-0j))': 6007, '((5+12j), (1+0j))': 6007, '((3+7j), (1+0j))': 6008, '((5+13j), (1+0j))': 6008, '((5+9j), (1+0j))': 6008, '((2+7j), (1+0j))': 6009, '((2+7j), (1-0j))': 6009, '((3+6j), (1-0j))': 6009, '((4+7j), (1-0j))': 6009, '((5+8j), (1-0j))': 6009, '((6+13j), (-1+0j))': 6009, '((6+13j), (1-0j))': 6009, '((6+9j), (-1+0j))': 6009, '((6+9j), (1-0j))': 6009, '((1+7j), (1+0j))': 6010, '((1+7j), (1-0j))': 6010, '((3+5j), (1+0j))': 6010, '((7+13j), (-1+0j))': 6010, '((7+13j), (1-0j))': 6010, '((7+9j), (-1+0j))': 6010, '((7+9j), (1-0j))': 6010, '((1+6j), (-1+0j))': 6011, '((1+6j), (1-0j))': 6011, '((6+7j), (-1+0j))': 6011, '((6+7j), (1-0j))': 6011, '((7+12j), (-1+0j))': 6011, '((7+12j), (1+0j))': 6011, '((8+13j), (-1+0j))': 6011, '((8+13j), (1-0j))': 6011, '((8+9j), (-1+0j))': 6011, '((8+9j), (1-0j))': 6011, '((1+5j), (-1+0j))': 6012, '((1+5j), (1+0j))': 6012, '((7+11j), (-1+0j))': 6012, '((7+11j), (1-0j))': 6012, '((7+7j), (-1+0j))': 6012, '((7+7j), (1-0j))': 6012, '((9+13j), (-1+0j))': 6012, '((9+13j), (1-0j))': 6012, '((9+9j), (-1+0j))': 6012, '((9+9j), (1-0j))': 6012, '((1+4j), (-1+0j))': 6013, '((1+4j), (1-0j))': 6013, '((8+11j), (1+0j))': 6013, '((8+7j), (-1+0j))': 6013, '((8+7j), (1-0j))': 6013, '((9+10j), (-1+0j))': 6013, '((9+10j), (1-0j))': 6013, '((9+12j), (-1+0j))': 6013, '((9+12j), (1+0j))': 6013, '((1+3j), (-1+0j))': 6014, '((1+3j), (1+0j))': 6014, '((9+11j), (-1+0j))': 6014, '((9+11j), (1+0j))': 6014, '((9+11j), (1-0j))': 6014, '((9+7j), (-1+0j))': 6014, '((9+7j), (1-0j))': 6014, '((1+2j), (-1+0j))': 6015, '((1+2j), (1-0j))': 6015, '((10+7j), (-1+0j))': 6015, '((10+7j), (1-0j))': 6015, '((2+3j), (1+0j))': 6015, '((8+11j), (-1+0j))': 6015, '((9+10j), (1+0j))': 6015, '((9+12j), (1-0j))': 6015, '((9+6j), (-1+0j))': 6015, '((9+6j), (1+0j))': 6015, '((1+1j), (-1+0j))': 6016, '((1+1j), (1+0j))': 6016, '((11+7j), (-1+0j))': 6016, '((11+7j), (1-0j))': 6016, '((3+3j), (1+0j))': 6016, '((9+5j), (-1+0j))': 6016, '((9+5j), (1-0j))': 6016, '((10+5j), (1+0j))': 6017, '((11+8j), (-1+0j))': 6017, '((11+8j), (1-0j))': 6017, '((2+1j), (1+0j))': 6017, '((4+3j), (1+0j))': 6017, '((8+5j), (-1+0j))': 6017, '((11+5j), (1+0j))': 6018, '((11+9j), (-1+0j))': 6018, '((11+9j), (1-0j))': 6018, '((3+1j), (1+0j))': 6018, '((5+3j), (1+0j))': 6018, '((7+5j), (-1+0j))': 6018, '((11+10j), (-1+0j))': 6019, '((11+10j), (1-0j))': 6019, '((4+1j), (1+0j))': 6019, '((6+5j), (-1+0j))': 6019, '((11+11j), (-1+0j))': 6020, '((11+11j), (1-0j))': 6020, '((5+1j), (1+0j))': 6020, '((5+5j), (-1+0j))': 6020, '((11+12j), (-1+0j))': 6021, '((11+12j), (1-0j))': 6021, '((6+1j), (1+0j))': 6021, '((11+13j), (-1+0j))': 6022, '((11+13j), (1-0j))': 6022, '((7+1j), (1+0j))': 6022, '((12+13j), (1+0j))': 6023, '((13+13j), (1+0j))': 6024, '((2+7j), -1j)': 7009, '((6+13j), (-0-1j))': 7009, '((6+9j), (-0-1j))': 7009, '((1+7j), -1j)': 7010, '((7+13j), (-0-1j))': 7010, '((7+9j), (-0-1j))': 7010, '((1+6j), (-0-1j))': 7011, '((1+6j), 1j)': 7011, '((6+7j), (-0-1j))': 7011, '((7+12j), -1j)': 7011, '((7+12j), 1j)': 7011, '((8+13j), (-0-1j))': 7011, '((8+9j), (-0-1j))': 7011, '((1+5j), -1j)': 7012, '((1+5j), 1j)': 7012, '((7+11j), (-0-1j))': 7012, '((7+11j), 1j)': 7012, '((7+7j), (-0-1j))': 7012, '((9+13j), (-0-1j))': 7012, '((9+9j), (-0-1j))': 7012, '((1+4j), (-0-1j))': 7013, '((1+4j), 1j)': 7013, '((8+11j), -1j)': 7013, '((8+11j), 1j)': 7013, '((8+7j), (-0-1j))': 7013, '((9+10j), -1j)': 7013, '((9+12j), -1j)': 7013, '((1+3j), -1j)': 7014, '((1+3j), 1j)': 7014, '((9+11j), (-0-1j))': 7014, '((9+7j), (-0-1j))': 7014, '((1+2j), (-0-1j))': 7015, '((1+2j), 1j)': 7015, '((10+7j), (-0-1j))': 7015, '((2+3j), -1j)': 7015, '((2+3j), 1j)': 7015, '((8+11j), (-0-1j))': 7015, '((9+6j), -1j)': 7015, '((9+6j), 1j)': 7015, '((1+1j), -1j)': 7016, '((1+1j), 1j)': 7016, '((11+7j), (-0-1j))': 7016, '((3+3j), -1j)': 7016, '((3+3j), 1j)': 7016, '((9+5j), (-0-1j))': 7016, '((9+5j), 1j)': 7016, '((10+5j), -1j)': 7017, '((10+5j), 1j)': 7017, '((11+8j), (-0-1j))': 7017, '((11+8j), -1j)': 7017, '((2+1j), -1j)': 7017, '((2+1j), 1j)': 7017, '((3+2j), (-0-1j))': 7017, '((4+3j), -1j)': 7017, '((4+3j), 1j)': 7017, '((8+5j), (-0-1j))': 7017, '((8+5j), 1j)': 7017, '((11+5j), -1j)': 7018, '((11+5j), 1j)': 7018, '((11+9j), (-0-1j))': 7018, '((11+9j), -1j)': 7018, '((3+1j), -1j)': 7018, '((3+1j), 1j)': 7018, '((5+3j), -1j)': 7018, '((5+3j), 1j)': 7018, '((7+5j), (-0-1j))': 7018, '((7+5j), 1j)': 7018, '((11+10j), (-0-1j))': 7019, '((11+10j), -1j)': 7019, '((11+4j), (-0-1j))': 7019, '((3+2j), 1j)': 7019, '((4+1j), -1j)': 7019, '((4+1j), 1j)': 7019, '((5+4j), 1j)': 7019, '((6+5j), (-0-1j))': 7019, '((6+5j), 1j)': 7019, '((11+11j), (-0-1j))': 7020, '((11+11j), -1j)': 7020, '((11+3j), -1j)': 7020, '((5+1j), -1j)': 7020, '((5+1j), 1j)': 7020, '((5+5j), (-0-1j))': 7020, '((5+5j), 1j)': 7020, '((11+12j), (-0-1j))': 7021, '((11+12j), -1j)': 7021, '((5+4j), -1j)': 7021, '((6+1j), -1j)': 7021, '((6+1j), 1j)': 7021, '((11+13j), (-0-1j))': 7022, '((11+13j), -1j)': 7022, '((5+3j), (-0-1j))': 7022, '((7+1j), -1j)': 7022, '((7+1j), 1j)': 7022, '((12+13j), -1j)': 7023, '((12+13j), 1j)': 7023, '((7+2j), 1j)': 7023, '((13+13j), -1j)': 7024, '((13+13j), 1j)': 7024, '((7+3j), 1j)': 7024, '((13+12j), (-0-1j))': 7025, '((13+11j), -1j)': 7026, '((13+10j), (-0-1j))': 7027, '((13+9j), -1j)': 7028, '((13+8j), (-0-1j))': 7029, '((13+7j), -1j)': 7030, '((13+6j), (-0-1j))': 7031, '((13+5j), -1j)': 7032, '((13+4j), (-0-1j))': 7033, '((13+3j), -1j)': 7034, '((13+2j), (-0-1j))': 7035, '((13+1j), -1j)': 7036}\n",
-      "inf 7036 0\n",
-      "inf 7036 0\n",
-      "inf 7036 1\n",
-      "inf 7036 1\n",
-      "inf 7036 2\n",
-      "inf 7036 2\n",
-      "inf 7036 3\n",
-      "inf 7036 3\n",
-      "inf 7036 4\n",
-      "inf 7036 4\n",
-      "inf 7036 5\n",
-      "inf 7036 5\n",
-      "inf 7036 6\n",
-      "inf 7036 6\n",
-      "inf 7036 7\n",
-      "inf 7036 7\n",
-      "inf 7036 8\n",
-      "inf 7036 8\n",
-      "inf 7036 9\n",
-      "inf 7036 9\n",
-      "inf 7036 10\n",
-      "inf 7036 10\n",
-      "inf 7036 11\n",
-      "inf 7036 11\n",
-      "inf 7036 12\n",
-      "inf 7036 12\n",
-      "({'((13+1j), -1j)': 0, '((13+2j), (-0-1j))': 1, '((13+3j), -1j)': 2, '((13+4j), (-0-1j))': 3, '((13+5j), -1j)': 4, '((13+6j), (-0-1j))': 5, '((13+7j), -1j)': 6, '((13+8j), (-0-1j))': 7, '((13+9j), -1j)': 8, '((13+10j), (-0-1j))': 9, '((13+11j), -1j)': 10, '((13+12j), (-0-1j))': 11, '((13+13j), -1j)': 12}, None)\n"
+      "((13+1j), (1-0j)) inf 7036 0\n",
+      "((13+1j), (-1+0j)) inf 7036 0\n",
+      "((13+2j), (1+0j)) inf 7036 1\n",
+      "((13+2j), (-1+0j)) inf 7036 1\n",
+      "((13+3j), (1-0j)) inf 7036 2\n",
+      "((13+3j), (-1+0j)) inf 7036 2\n",
+      "((13+4j), (1+0j)) inf 7036 3\n",
+      "((13+4j), (-1+0j)) inf 7036 3\n",
+      "((13+5j), (1-0j)) inf 7036 4\n",
+      "((13+5j), (-1+0j)) inf 7036 4\n",
+      "((13+6j), (1+0j)) inf 7036 5\n",
+      "((13+6j), (-1+0j)) inf 7036 5\n",
+      "((13+7j), (1-0j)) inf 7036 6\n",
+      "((13+7j), (-1+0j)) inf 7036 6\n",
+      "((13+8j), (1+0j)) inf 7036 7\n",
+      "((13+8j), (-1+0j)) inf 7036 7\n",
+      "((13+9j), (1-0j)) inf 7036 8\n",
+      "((13+9j), (-1+0j)) inf 7036 8\n",
+      "((13+10j), (1+0j)) inf 7036 9\n",
+      "((13+10j), (-1+0j)) inf 7036 9\n",
+      "((13+11j), (1-0j)) inf 7036 10\n",
+      "((13+11j), (-1+0j)) inf 7036 10\n",
+      "((13+12j), (1+0j)) inf 7036 11\n",
+      "((13+12j), (-1+0j)) inf 7036 11\n",
+      "((13+13j), (1-0j)) inf 7036 12\n",
+      "((13+13j), (-1+0j)) inf 7036 12\n",
+      "13 None {'((13+1j), -1j)': 0, '((13+2j), (-0-1j))': 1, '((13+3j), -1j)': 2, '((13+4j), (-0-1j))': 3, '((13+5j), -1j)': 4, '((13+6j), (-0-1j))': 5, '((13+7j), -1j)': 6, '((13+8j), (-0-1j))': 7, '((13+9j), -1j)': 8, '((13+10j), (-0-1j))': 9, '((13+11j), -1j)': 10, '((13+12j), (-0-1j))': 11, '((13+13j), -1j)': 12}\n"
      ]
     },
     {
@@ -1023,7 +1112,7 @@
        "7036"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1145,7 @@
     "            # print('here', new)\n",
     "            yield new\n",
     "        for i in (str((p, diff*1j)), str((p, diff*-1j))):\n",
-    "            print(visited.get(i, math.inf), score, distance)\n",
+    "            print(i, visited.get(i, math.inf), score, distance)\n",
     "            # yield (distance+1000, str((pos, dir*1j)))\n",
     "            # yield (distance+1000, str((pos, dir*-1j)))\n",
     "\n",
@@ -1064,8 +1153,8 @@
     "\n",
     "    def ec(node, distance):\n",
     "        return node == (start, 1)\n",
-    "    test = search(current, gn, ec)\n",
-    "    print(test)\n",
+    "    test, _ = search(current, gn, ec)\n",
+    "    print(len(test), _, test)\n",
     "\n",
     "\n",
     "\n",
